[gd_scene load_steps=6 format=3 uid="uid://bbuxphekpudlo"]

[ext_resource type="Script" uid="uid://cw3r2xvtaj8rj" path="res://scripts/win_screen.gd" id="1_2l6cc"]
[ext_resource type="FontFile" uid="uid://ddhdg7bigjv3h" path="res://fonts/Rubik-Bold.ttf" id="3_0lrm4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erk2x"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2l6cc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e41g7"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.976471)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Win Screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2l6cc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0962048, 0.0962047, 0.0962047, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1731.0
offset_top = 549.0
offset_right = 2652.0
offset_bottom = 1304.0
scale = Vector2(1.2, 1.2)
theme_override_constants/separation = 50

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = -853.0
offset_top = -64.0
offset_right = -372.0
offset_bottom = 55.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_fonts/font = ExtResource("3_0lrm4")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_erk2x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2l6cc")
theme_override_styles/normal = SubResource("StyleBoxFlat_e41g7")
text = "CONTINUE"

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="VBoxContainer/Control2"]
layout_mode = 0
offset_left = -853.0
offset_top = 54.0
offset_right = -372.0
offset_bottom = 173.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_fonts/font = ExtResource("3_0lrm4")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_erk2x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2l6cc")
theme_override_styles/normal = SubResource("StyleBoxFlat_e41g7")
text = "RESTART"

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Main Menu" type="Button" parent="VBoxContainer/Control3"]
layout_mode = 0
offset_left = -853.0
offset_top = 170.0
offset_right = -372.0
offset_bottom = 289.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_fonts/font = ExtResource("3_0lrm4")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_erk2x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2l6cc")
theme_override_styles/normal = SubResource("StyleBoxFlat_e41g7")
text = "MAIN MENU"

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 46.0
offset_right = 1457.0
offset_bottom = 407.0
theme_override_fonts/font = ExtResource("3_0lrm4")
theme_override_font_sizes/font_size = 150
text = "LEVEL 
COMPLETED"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Control/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Control2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Control3/Main Menu" to="." method="_on_main_menu_pressed"]
